--- a/example/course-resources/fork/levels/delete-unmerged.yaml
+++ b/example/course-resources/fork/levels/delete-unmerged.yaml
@@ -7,7 +7,7 @@ repoVcsSetups:
 steps:
   - !loadLastLevelFinalSnapshot {}
 
-  # instruct to fastforward a branch
+  # instruct to delete a unmerged branch
   - !elaborate
     descriptionId: "level-data/delete-unmerged/intro"
   - !instruct 
