--- a/example/course-resources/fork/level-data/checkout-branch-index.yaml
+++ b/example/course-resources/fork/level-data/checkout-branch-index.yaml
@@ -134,8 +134,8 @@ asset_index:
       還有切換完之後，就可以確保${{t/branch}}可以跟隨著我們新增${{t/revision}}的腳步前進  
 
       嗯...「**切換**」這個詞好像之前我們已經用得很多了  
-      沒錯！我們剛剛學習切換的是「**${{t/branch}}**」  
-      而以前我們學習的，是切換「**${{t/revision}}**」  
+      沒錯！我們剛剛學習切換的是「**${{t/branch}}**」<br>
+      而以前我們學習的，是切換「**${{t/revision}}**」<br>
       
       他們之間到底有甚麼差別呢？我們將在下一個章節中詳細說明，敬請期待
       
