--- a/example/course-resources/fork/level-data/current-branch-index.yaml
+++ b/example/course-resources/fork/level-data/current-branch-index.yaml
@@ -100,7 +100,7 @@ asset_index:
       但是，既然有「位於某某分支上」，是否也有可能「**不位於『任何』分支上**」呢？  
 
       這當然是存在的！  
-      只要我們${{t/checkout-rev}}，其實就「**不位於任何分支上**」  
+      只要我們切換到一個特定的${{t/revision}}/${{t/commit}}，其實就「**不位於任何分支上**」  
       也就是從這個教學很前面的章節開始，我們時常都處於這個狀態  
       現在，讓我們再次${{t/checkout-rev}}來回顧一下吧  
 
@@ -146,7 +146,7 @@ asset_index:
       這其實是因為它有一個重要的性質，一個我們已經很熟的性質：  
       當處在這個狀態的時候，我們所增加的新的${{t/revision}}  
       會在切換到別的${{t/revision}}或任何的${{t/branch}}之後，就消失不見  
-      導致我們極有可能會作白工  
+      **導致我們極有可能會作白工**  
 
       正是因為這個緣故，這個狀態被專門起了這樣不太討喜的名字  
       並且在絕大多數的 git 使用介面中(或甚至可能是全部)，**一旦使用者要進入這個狀態的時候，都會收到警告**  
