--- a/example/course-resources/fork/level-data/branch-grow-index.yaml
+++ b/example/course-resources/fork/level-data/branch-grow-index.yaml
@@ -17,7 +17,7 @@ asset_index:
 
     prepare-for-commit: |+2
       .md
-      我們確認了${{t/head}}目前指向「`${{level-data/create-branch-limit/racing-branch-name-2}}`」  
+      我們確認了${{t/head}}目前指向「`${{level-data/create-branch-limit/racing-branch-name-2}}`」<br>
       根據之前所學，如果這個時候我們建立新的${{t/revision}}  
       應該會推動${{level-data/create-branch-limit/racing-branch-name-2}}移動到新的${{t/revision}}上  
       就讓我們來實際操作一下確認看看吧  
@@ -71,7 +71,7 @@ asset_index:
       我們的實驗設定如下：  
       1. 有兩個${{t/branch}}原本都位在同一個${{t/revision}}上面  
          這裡選擇「`${{level-data/create-branch-limit/racing-branch-name-1}}`」還有「`${{level-data/create-branch-limit/racing-branch-name-2}}`」  
-      2. 其中一個${{t/branch}}率先透過建立${{t/revision}}往前進(也就是剛剛`$level-data/create-branch-limit/racing-branch-name-2`往前進)  
+      2. 其中一個${{t/branch}}率先透過建立${{t/revision}}往前進(也就是剛剛`${{level-data/create-branch-limit/racing-branch-name-2}}`往前進)  
       3. 如果切換回到落後的一方，重新試圖建立一模一樣的${{t/revision}}，是否就可以成功追上領先的的${{t/branch}}呢？  
 
     checkout-branch-1: |+2
@@ -108,7 +108,7 @@ asset_index:
       當我們建立${{t/revision}}的時候，只有${{t/head}}所指向的${{t/branch}}會成長  
       這表示不同的${{t/branch}}，會各自紀錄一個資料夾中的檔案變化歷史，不會互相干涉  
 
-      再來，我們不可能透過建立${{t/revision}}來讓兩個分道揚鑣的${{t/branch}}重新會合  
+      再來，我們很難透過建立${{t/revision}}來讓兩個分道揚鑣的${{t/branch}}重新會合  
       這樣的特性，也確保我們不會不小心讓兩個刻意想要分開的歷史，重新交會
 
       但是，我們有辦法融合一度分開的歷史嗎？  
