--- a/example/course-resources/fork/level-data/branch-list-index.yaml
+++ b/example/course-resources/fork/level-data/branch-list-index.yaml
@@ -20,9 +20,9 @@ asset_index:
       開啟之後，請回答這個${{t/repo}}中，目前擁有多少個${{t/branch}}呢？  
       請不要忘記 master 也是一個${{t/branch}}喔  
 
-      1. 10
-      2. 11
-      3. 12
+      1. 99
+      2. 1200
+      3. 16
 
       請以選項編號(1/2/3)回答  
 
@@ -40,7 +40,7 @@ asset_index:
       <div class="img-title">圖(一)</div>  
 
       這個列表上直白的條列出整個${{t/repo}}內的${{t/branch}}  
-      除此之外，仔細看圖中橘框圈選的「${{level-data/create-and-checkout-branch/branch-name-7}}」上面  
+      除此之外，仔細看圖中橘框圈選的範圍    
       也有特殊的標記來標示出這是當前的${{t/branch}}  
 
       這個列表除了展示${{t/branch}}之外  
