--- a/example/course-resources/fork/levels/create-repo.yaml
+++ b/example/course-resources/fork/levels/create-repo.yaml
@@ -11,26 +11,24 @@
 
   steps:
   # prepare a folder WITHOUT git installed
-    - !dev.devAction 
+    - !playActions 
+      descriptionId: "level-data/create-repo/play-actions"
       actions:
         - !act.writeFile 
           sourceAssetIds:
             - "$level-data/create-repo/file-1"
             - "$level-data/create-repo/file-2"
             - "$level-data/create-repo/file-3"
+            - "$level-data/create-repo/file-1"
           destinationPaths:
             - "$level-data/create-repo/file-1-path"
             - "$level-data/create-repo/file-2-path"
             - "$level-data/create-repo/file-3-path"
-        - !dev.act.saveReference 
-          repoSetupName: create-repo-midpoint
-          referenceName: init
-        - !dev.act.saveReference 
-          repoSetupName: create-repo-empty
-          referenceName: init
+            - "create-repo-empty/1"
+        - !act.removeFile 
+          targetPaths:
+            - "create-repo-empty/1" 
 
-    - !loadReference 
-      referenceName: init
   # intro
     - !elaborate 
       descriptionId: "level-data/create-repo/intro"
