Add course assets

--- a/example/course-resources/fork/level-data/create-repo-index.yaml
+++ b/example/course-resources/fork/level-data/create-repo-index.yaml
@@ -33,7 +33,7 @@ asset_index:
       現在我們發現了${{t/gui}}無法順利開啟全空的資料夾  
       如果嘗試開啟，就會跳出如圖(一)的對話框  
       他的大致意思是：  
-      「  
+      「<br>
       這個資料夾並沒有被 git 控管  
       它並不是一個 git 倉庫  
       」  
@@ -52,13 +52,9 @@ asset_index:
       <div class="img-title">圖(二)</div>  
 
       選擇前述的選項之後  
-      就會跳出如下圖(三)的選擇視窗，用來選擇要建立倉庫的資料夾  
-
-      ![illustration]({{images/create-repo-empty-2}})  
-      <div class="img-title">圖(三)</div>  
+      就會選擇視窗，用來選擇要建立倉庫的資料夾  
 
       請在這裡選擇位於「`#{{create-repo-empty}}`」的資料夾  
-      並且按下如上圖紅框圈選的確定按鈕，完成選擇  
       選擇成功後，git 就會在選定的位置建立倉庫  
 
       完成建立倉庫之後，請按下「執行」按鈕，確認結果  
