--- a/example/course-resources/fork/archives-index.yaml
+++ b/example/course-resources/fork/archives-index.yaml
@@ -6,3 +6,6 @@ asset_index:
     merge-branches: merge-branches.zip
     create-repo-empty: create-repo-empty.zip
     create-repo-midpoint: create-repo-midpoint.zip
+    share-history: share-history.zip
+    share-history-remote: share-history-remote.zip
+    share-history-another: share-history-another.zip
