--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -34,6 +34,7 @@
         "!dev.act.git mapping",
         "!dev.act.saveReference mapping",
         "!dev.act.loadRepoReferenceArchive mapping",
+        "!dev.act.cloneRepo mapping",
         "!dev.act.idle mapping",
 
         "!verifyInput mapping",
