--- a/example/course-resources/fork/images-index.yaml
+++ b/example/course-resources/fork/images-index.yaml
@@ -186,3 +186,8 @@ asset_index:
 # create-repo
     try-open-empty-folder: create-repo@try-open-empty-folder.png
     create-repo-empty-1: create-repo@create-repo-empty-1.png
+
+# clone-repo
+    cloud-drive-concept: clone-repo@cloud-drive-concept.png
+    clone-operate-1: clone-repo@clone-operate-1.png
+    clone-operate-2: clone-repo@clone-operate-2.png
