Adding SetUserAction (WIP)

--- a/example/course-resources/fork/levels/clone-repo.yaml
+++ b/example/course-resources/fork/levels/clone-repo.yaml
@@ -116,4 +116,26 @@
           remoteNickName: origin          
     - !verifyRepo 
       referenceName: "clone-repo-clone"
+
+    - !playActions 
+      descriptionId: "level-data/create-repo/play-actions"
+      actions:
+        - !act.writeFile 
+          sourceAssetIds:
+            - "$level-data/create-repo/file-1"
+            - "$level-data/create-repo/file-2"
+            - "$level-data/create-repo/file-3"
+            - "$level-data/create-repo/file-1"
+          destinationPaths:
+            - "$level-data/create-repo/file-1-path"
+            - "$level-data/create-repo/file-2-path"
+            - "$level-data/create-repo/file-3-path"
+            - "create-repo-empty/1"
+        - !act.removeFile 
+          targetPaths:
+            - "create-repo-empty/1" 
+
+    - !elaborate 
+      descriptionId: "level-data$intro-cloned-repo"
+    
           
