--- a/example/course-resources/fork/st-index.yaml
+++ b/example/course-resources/fork/st-index.yaml
@@ -29,3 +29,4 @@ asset_index:
     delete-modal-confirm: "Delete(刪除)"
     tool-bar-file: "File(檔案)"
     clone-item: "Clone...(複製...)"
+    clone-modal-clone-button: "Clone(複製)"
