--- a/example/course-resources/fork/images-index.yaml
+++ b/example/course-resources/fork/images-index.yaml
@@ -191,4 +191,4 @@ asset_index:
     cloud-drive-concept: clone-repo@cloud-drive-concept.png
     clone-operate-1: clone-repo@clone-operate-1.png
     clone-operate-2: clone-repo@clone-operate-2.png
-    cloned-repo: clone-repo@cloned-repo-graph.png
+    cloned-repo-graph: clone-repo@cloned-repo-graph.png
