--- a/example/course-resources/fork/levels-index.yaml
+++ b/example/course-resources/fork/levels-index.yaml
@@ -56,6 +56,8 @@ asset_index:
   # level names of section seven
     main.create-repo.name: "7-1 節：建立倉庫"
     main.clone-repo.name: "7-2 節：複製倉庫"
+    main.push-branch.name: "7-3 節：推送分支"
+    
 
   ondisk:
   # level configs of section one: intro
@@ -104,3 +106,4 @@ asset_index:
   # level configs of section seven: share repository
     create-repo: "create-repo.yaml"
     clone-repo: "clone-repo.yaml"
+    push-branch: "push-branch.yaml"
