--- a/example/course-resources/fork/t-index.yaml
+++ b/example/course-resources/fork/t-index.yaml
@@ -62,5 +62,8 @@ asset_index:
     clone-repo: "複製倉庫"
     clone-repo-f: "複製倉庫(clone repository)"
     push-f: "推送(push)"
-    push-branch-f: "推送分支(push branch)"
     push: "推送"
+    push-branch-f: "推送分支(push branch)"
+    fetch-f: "抓取(fetch)"
+    fetch: "抓取"
+    pull-f: "拉收(pull)"
