--- a/example/course-resources/fork/levels-index.yaml
+++ b/example/course-resources/fork/levels-index.yaml
@@ -57,6 +57,7 @@ asset_index:
     main.create-repo.name: "7-1 節：建立倉庫"
     main.clone-repo.name: "7-2 節：複製倉庫"
     main.push-branch.name: "7-3 節：推送分支"
+    main.fetch-branch.name: "7-4 節：抓取分支"
     
 
   ondisk:
@@ -107,3 +108,4 @@ asset_index:
     create-repo: "create-repo.yaml"
     clone-repo: "clone-repo.yaml"
     push-branch: "push-branch.yaml"
+    fetch-branch: "fetch-branch.yaml"
